        Reviewed  and landed by Darin

Get rid of some misuses of |islower| and |tolower| for non-ASCII characters.
        http://bugs.webkit.org/show_bug.cgi?id=13138

        * platform/StringImpl.cpp:
        (WebCore::StringImpl::isLower):
        (WebCore::StringImpl::lower):
        (WebCore::StringImpl::equalIgnoringCase):



Canonical link: https://commits.webkit.org/17272@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@20559 268f45cc-cd09-0410-ab3c-d52691b4dbfc